// # character is used to separate pages 
// Unused space until first #

#Release notes - v0.2

Roadmap

- Bug: Removed unused rewards
- Bug: Broken tiles in some rooms
- Bug: Sometimes you cant complete the room even defeating all enemies
- Support for WASD controls
- Controls tutorial on game starts (only first time)
- Now only one secret room is spawned per run.

Changes

- Game starts with 1 HP more
- Removed signs for now (until implemented)

#Release notes - v0.1

This was the version released for the GBJAM

Known issues 

- Sometimes you cant complete the room even defeating all enemies
- Sword hit box