@@ -1,0 +1,11 @@
+fileFormatVersion: 2
+guid: 001c9121ee67ca94ca971cdf8a3f45bc
+MonoImporter:
+  externalObjects: {}
+  serializedVersion: 2
+  defaultReferences: []
+  executionOrder: 0
+  icon: {instanceID: 0}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
