@@ -1,0 +1,7 @@
+fileFormatVersion: 2
+guid: 19816a1f478152a4ba84cbd346124427
+DefaultImporter:
+  externalObjects: {}
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
