@@ -6,6 +6,9 @@ EditorBuildSettings:
   serializedVersion: 2
   m_Scenes:
   - enabled: 1
+    path: Assets/Scenes/Changelog.unity
+    guid: 19816a1f478152a4ba84cbd346124427
+  - enabled: 1
     path: Assets/Scenes/MainMenu.unity
     guid: 4bd21344b7babd54e863c651d3b50af0
   - enabled: 1
