@@ -1,4 +1,4 @@
-// # character is used to separate pages 
+// # is a special character used to separate pages
 // Unused space until first #
 
 #Release notes - v0.2
@@ -16,6 +16,7 @@ Changes
 
 - Game starts with 1 HP more
 - Removed signs for now (until implemented)
+- Added this changelog window when the game starts
 
 #Release notes - v0.1
 
@@ -24,4 +25,6 @@ This was the version released for the GBJAM
 Known issues 
 
 - Sometimes you cant complete the room even defeating all enemies
-- Sword hit box
+- Sword hit box in some directions doesn't work well.
+- Signs do nothing (couldn't implement them in time)
+- Sometimes enemies become stuck in corners
